[gd_scene load_steps=26 format=2]

[ext_resource path="res://fonts/ChivoMono-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/hud.gd" type="Script" id=2]
[ext_resource path="res://icons/information.png" type="Texture" id=3]
[ext_resource path="res://icons/exit.png" type="Texture" id=4]
[ext_resource path="res://icons/return.png" type="Texture" id=5]
[ext_resource path="res://icons/checkmark.png" type="Texture" id=6]
[ext_resource path="res://scenes/hud_panel_style.tres" type="StyleBox" id=7]
[ext_resource path="res://icons/pause.png" type="Texture" id=8]

[sub_resource type="InputEventAction" id=20]
action = "restart_game"

[sub_resource type="ShortCut" id=21]
shortcut = SubResource( 20 )

[sub_resource type="InputEventAction" id=18]
action = "pause_game"

[sub_resource type="ShortCut" id=19]
shortcut = SubResource( 18 )

[sub_resource type="InputEventAction" id=5]
action = "show_info"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventAction" id=7]
action = "quit_game"

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=16]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=17]
size = 27
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=10]
action = "enter"

[sub_resource type="ShortCut" id=11]
shortcut = SubResource( 10 )

[sub_resource type="DynamicFont" id=12]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 32
font_data = ExtResource( 1 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -600.0
custom_styles/panel = ExtResource( 7 )

[node name="ButtonsContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -320.0
custom_constants/separation = 35

[node name="RestartButton" type="TextureButton" parent="Panel/ButtonsContainer"]
margin_right = 101.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut = SubResource( 21 )
texture_normal = ExtResource( 5 )
expand = true

[node name="PauseButton" type="TextureButton" parent="Panel/ButtonsContainer"]
margin_left = 136.0
margin_right = 238.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut = SubResource( 19 )
texture_normal = ExtResource( 8 )
expand = true

[node name="InfoButton" type="TextureButton" parent="Panel/ButtonsContainer"]
margin_left = 273.0
margin_right = 375.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut_in_tooltip = false
shortcut = SubResource( 6 )
texture_normal = ExtResource( 3 )
expand = true

[node name="ExitButton" type="TextureButton" parent="Panel/ButtonsContainer"]
margin_left = 410.0
margin_right = 512.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut_in_tooltip = false
shortcut = SubResource( 8 )
texture_normal = ExtResource( 4 )
expand = true

[node name="ScoreAndBestContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
margin_top = 150.0
margin_bottom = 240.0

[node name="ScoreContainer" type="VBoxContainer" parent="Panel/ScoreAndBestContainer"]
margin_right = 274.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScoreLabel" type="Label" parent="Panel/ScoreAndBestContainer/ScoreContainer"]
margin_right = 274.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Score:"
align = 1

[node name="ValueLabel" type="Label" parent="Panel/ScoreAndBestContainer/ScoreContainer"]
margin_top = 47.0
margin_right = 274.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="BestContainer" type="VBoxContainer" parent="Panel/ScoreAndBestContainer"]
margin_left = 278.0
margin_right = 552.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BestLabel" type="Label" parent="Panel/ScoreAndBestContainer/BestContainer"]
margin_right = 274.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
text = "Best:"
align = 1

[node name="ValueLabel" type="Label" parent="Panel/ScoreAndBestContainer/BestContainer"]
margin_top = 47.0
margin_right = 274.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="TimerLabel" type="Label" parent="Panel"]
margin_left = 200.0
margin_top = 258.0
margin_right = 352.0
margin_bottom = 297.0
custom_fonts/font = SubResource( 16 )
text = "00:00:00"

[node name="RuleLabel" type="Label" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -80.0
custom_fonts/font = SubResource( 2 )
text = "Join the tiles with same numbers and get to the 2048 tile."
align = 1
autowrap = true

[node name="PauseLabel" type="Label" parent="Panel"]
margin_left = 219.0
margin_top = 292.0
margin_right = 333.0
margin_bottom = 331.0
custom_colors/font_color = Color( 0.921569, 1, 0, 1 )
custom_fonts/font = SubResource( 17 )
text = "pause"
align = 1

[node name="InfoPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -600.0
custom_styles/panel = ExtResource( 7 )

[node name="ControlLabel" type="Label" parent="InfoPanel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 362.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 14 )
text = "Control:

W, K, Up     - move up
S, J, Down   - move down
A, H, Left   - move left
D, L, Right  - move right
Space        - pause
R            - restart
I            - show this page
Enter        - close this page
Esc          - quit game"

[node name="OkButton" type="TextureButton" parent="InfoPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_top = 300.0
margin_right = 50.0
shortcut_in_tooltip = false
shortcut = SubResource( 11 )
texture_normal = ExtResource( 6 )

[node name="WinPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -600.0
custom_styles/panel = ExtResource( 7 )

[node name="WinLabel" type="Label" parent="WinPanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -19.5
margin_bottom = 19.5
custom_fonts/font = SubResource( 12 )
text = "Congratulations.
You win!"
align = 1
valign = 1

[node name="OkButton" type="TextureButton" parent="WinPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_top = 300.0
margin_right = 50.0
shortcut_in_tooltip = false
shortcut = SubResource( 11 )
texture_normal = ExtResource( 6 )

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -600.0
custom_styles/panel = ExtResource( 7 )

[node name="Label" type="Label" parent="GameOverPanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -19.5
margin_bottom = 19.5
custom_fonts/font = SubResource( 13 )
text = "####"
align = 1
valign = 1

[node name="OkButton" type="TextureButton" parent="GameOverPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_top = 300.0
margin_right = 50.0
shortcut_in_tooltip = false
shortcut = SubResource( 11 )
texture_normal = ExtResource( 6 )

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Panel/ButtonsContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Panel/ButtonsContainer/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="Panel/ButtonsContainer/InfoButton" to="." method="_on_InfoButton_pressed"]
[connection signal="pressed" from="Panel/ButtonsContainer/ExitButton" to="." method="quit"]
[connection signal="pressed" from="InfoPanel/OkButton" to="." method="_on_InfoPanel_OkButton_pressed"]
[connection signal="pressed" from="WinPanel/OkButton" to="." method="_on_WinPanel_OkButton_pressed"]
[connection signal="pressed" from="GameOverPanel/OkButton" to="." method="_on_GameOverPanel_OkButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="update_timer"]
